--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
   #navbar .topnav-right {
     display: flex;
     align-items: center;
-    margin-left: 24%;
+    margin-left: 18%;
   
   }
   
@@ -41,6 +41,8 @@
     text-decoration: none;
    
     padding: 33px 23px;
+    border: 2px solid black;
+    
   
   
   }
@@ -72,7 +74,7 @@
     height: 100%;
     width: 100%;
     z-index: -1;
-    opacity: 0.8;
+    /* opacity: 0.2; */
   }
   ul{
     margin-top: -7px;
@@ -87,15 +89,14 @@
   #navbar ul li {
     list-style: none;
     font-size: 1.3rem;
-    font-weight: 580;
+    font-weight: 550;
   
   }
   
   #navbar ul li a {
     color: rgb(14, 14, 14);
     display: block;
-    padding: 32px 12px;
-    
+    padding: 36px 12px;
     text-decoration: none;
     text-transform: uppercase;
     transition: all .50s ease;
@@ -105,6 +106,7 @@
   #navbar ul li a:hover {
     color: rgb(254, 254, 255);
     background-color: rgb(29, 117, 31);
+    
   }
   
 /* LOGO */
@@ -122,7 +124,7 @@
     display: flex;
     flex-direction: column;
     padding: 3px 200px;
-    height: 615px;
+    height: 500px;
     justify-content: center;
     align-items: center;
   
@@ -131,13 +133,13 @@
   #home::before {
     content: "";
     position: absolute;
-    background: url(main.jpg)no-repeat center center/cover;
+    background: url(main3.jpg)no-repeat center center/cover;
     height: 100%;
     top: 0px;
     left: 0px;
     width: 100%;
     z-index: -1;
-    opacity: 0.5;
+    opacity: 0.8;
   }
   
   #home h1 {
@@ -152,7 +154,7 @@
     text-align: center;
     font-size: 1.5rem;
     
-    font-weight: 600;
+    font-weight: 400;
     letter-spacing: 1.5px;
   }
   
