--- a/style.css
+++ b/style.css
@@ -39,9 +39,10 @@
     transition: all .50s ease;
     text-transform: uppercase;
     text-decoration: none;
-   
-    padding: 33px 23px;
-    border: 2px solid black;
+    /* border: 2px solid ; */
+    margin: 5px 6px;
+    padding: 7px 18px;
+    border-radius: 59px;
     
   
   
@@ -62,7 +63,7 @@
     position: fixed;
     width: 100%;
     box-shadow: 0 6px 63px 0 rgb(20 20 45 / 20%);
-  
+    height: 72px;
   }
 
   #navbar::before {
@@ -74,7 +75,7 @@
     height: 100%;
     width: 100%;
     z-index: -1;
-    /* opacity: 0.2; */
+    opacity: 0.2;
   }
   ul{
     margin-top: -7px;
@@ -96,11 +97,19 @@
   #navbar ul li a {
     color: rgb(14, 14, 14);
     display: block;
-    padding: 36px 12px;
+    /* padding: 36px 12px; */
     text-decoration: none;
     text-transform: uppercase;
     transition: all .50s ease;
     font-size: 1.3rem;
+    /* margin: 0px 13px; */
+    /* border: 2px solid black; */
+    border-radius: 25px;
+    padding: 5px 12px;
+    /* border: 2px solid black; */
+    /* margin: 5px 6px; */
+    /* padding: 7px 18px; */
+    /* border-radius: 59px; */
   }
   
   #navbar ul li a:hover {
@@ -206,7 +215,7 @@
   
   .content h4 {
     font-weight: 600;
-    color: #29721b;
+    color:#6c721b;
     font-size: 61px;
     margin-top: 1%;
     text-align: center;
@@ -215,7 +224,7 @@
   
   .content h3 {
     font-weight: 600;
-    color: #29721b;
+    color:#6c721b;
     font-size: 61px;
     text-align: left;
     text-align: center;
