--- a/login.css
+++ b/login.css
@@ -26,7 +26,7 @@ form {
   
   /* Set a style for all buttons */
   button {
-    background-color: #2d803c;
+    background-color: #236aa5;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
