--- a/style.css
+++ b/style.css
@@ -706,5 +706,89 @@ ul a {
   color: #dddddd;
   text-align: center;
 } 
-  
+ul a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+ul p {
+  font-size: 2rem;
+  font-weight: 500;
+
+}
+
+ul p:hover {
+  color: rgb(254, 254, 255);
+  background-color: #033864;
+}
+
+.row-flex {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+
+}
+
+.flex-column-form {
+  display: flex;
+  flex-direction: column;
+  /* flex: 1; */
+  font-size: 1.5rem;
+  font-weight: 50;
+  gap: 1rem;
+  margin: 10px 40px;
+  font-family: 'Bree Serif', serif;
+}
+
+.flex-column-form h3 {
+  font-size: 2rem;
+  letter-spacing: 2px;
+  font-family: 'Bree Serif', serif;
+
+}
+
+.flex-column-form h3:hover {
+  color: #29721b;
+}
+
+.btn-primary {
+  color: #ffffff;
+  background-color: #c4c6be;
+  text-transform: uppercase;
+  font-size: 16px;
+  padding: 6px 52px;
+  border-radius: 5px;
+  letter-spacing: 2px;
+  border: 0;
+  gap: 1rem;
+  font-family: 'Bree Serif', serif;
+}
+
+.btn-primary:hover {
+  background-color: #848482;
+}
+
+
+
+.foot-panel4 {
+  background-color: #1f2622e7;
+  color: white;
+  height: 50px;
+  font-family: 'Bree Serif', serif;
+  padding: 3%;
+  font-weight: 300;
+
+}
+
+.pages {
+  font-size: 1.3rem;
+  text-align: center;
+  padding-top: 0px;
+}
+
+.copyright {
+  font-size: 1rem;
+  text-align: center;
+  margin-top: 2px;
+}  
   
