payment section update

--- a/payment.css
+++ b/payment.css
@@ -13,7 +13,7 @@
     align-items: center;
     padding:25px;
     min-height: 100vh;
-    background:#e2feec;
+    background:#033864;
   }
   
   .container form{
