--- a/ngo.css
+++ b/ngo.css
@@ -1,7 +1,7 @@
 body{
     width: 100%;
     height: 100vh;
-    background: #cbc5c5;
+    background: rgba(81, 128, 162, 0.604);
     }
 
 h1{
@@ -10,7 +10,7 @@ h1{
 }
 
 a {
-    color: hsl( 170 , 80% , 35% );
+    color: #033864;
     text-decoration: none;
     transition: .2s;
 }
