--- a/ngo.css
+++ b/ngo.css
@@ -1,7 +1,7 @@
 body{
     width: 100%;
     height: 100vh;
-    background: rgba(81, 128, 162, 0.604);
+    background: #cbc5c5;
     }
 
 h1{
@@ -10,7 +10,7 @@ h1{
 }
 
 a {
-    color: #033864;
+    color: hsl( 170 , 80% , 35% );
     text-decoration: none;
     transition: .2s;
 }
@@ -34,3 +34,4 @@ div{
     display: flex;
     justify-content: center;
 }
+
