--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ ul {
 }
 
 #home b {
-  font-size: 42px;
+  font-size: 70px;
 }
 .button {
   padding: 6px 20px;
@@ -252,6 +252,7 @@ ul {
   transform: translateX(-100%);
   animation: slideInLeft 1s forwards;
   z-index: -1;
+  /* transition: transform 0.5s ease-in-out; */
 }
 
 .content h3 {
@@ -275,7 +276,11 @@ ul {
   /* z-index: -1; */
   transform: translateX(-100%);
   animation: slideInLeft 1s forwards;
+
+  /* transition: transform 0.5s ease-in-out; */
 }
+
+
 #mission{
   transform: translateX(100%);
   animation: slideInRight 1s forwards;
@@ -751,7 +756,7 @@ footer {
   justify-content: center;
   align-items: center;
   font-size: 4rem;
-  font-family: "Nunito", sans-serif;
+  font-family:fantasy;
   font-weight: 600;
 }
 .foot-panel2 {
